--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
        if(flag==true){
         
          alert("logged in Successfully")
-        window.location.href="index.html";
+        window.location.href="index1.html";
         // console.log(window.location.href="index.html")
         
       }
