--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
+    <!-- <style>
+        /* #tasks{
+            display: grid;
+            grid-template-columns: repeat(300px,4fr);
+            grid-template-rows: 300px auto;
+            margin: auto;
+            justify-content: center;
+        } */
+    </style> -->
 </head>
 
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -15,8 +24,7 @@
     <nav>
         <div class="navbar">
             <div class="nav_logo"> 
-                <img src="https://tv.apple.com/assets/brands/Apple_TV_plus_logo_white-2721485772b7d06c4e33379ce990870e.svg
-                " alt="">
+               <a href="./admin.html"><img src="./TV-Television-Youtube-Show-Channel-Video-Red-Blue-Black-Logo.png" alt=""></a> 
             </div>
          <div class="btn">
             <input  class="search" type="search" placeholder="Search">
@@ -30,9 +38,14 @@
         </div>
     </nav>
 </header>
+<!-- //code for silder carousol in j? -->
+<main>
 
-<div id="tasks">
-    
-</div>
+
+
+
+</main>
+
+
 </body>
 <script src="./index.js"></script> 
