--- a/signup.html
+++ b/signup.html
@@ -16,8 +16,7 @@
         <nav>
             <div class="navbar">
                 <div class="nav_logo"> 
-                    <img src="https://tv.apple.com/assets/brands/Apple_TV_plus_logo_white-2721485772b7d06c4e33379ce990870e.svg
-                    " alt="">
+                    <img src="./TV-Television-Youtube-Show-Channel-Video-Red-Blue-Black-Logo.png" alt="">
                 </div>
              <div class="btn">
                 <input  class="search" type="search" placeholder="Search">
