--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="shortcut icon" href="https://www.linkpicture.com/q/TV-Television-Youtube-Show-Channel-Video-Red-Blue-Black-Logo.png" type="image/x-icon">
     <!-- Font Awesome link -->
     <script src="https://kit.fontawesome.com/e76072a7dc.js" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/e76072a7dc.js" crossorigin="anonymous"></script>
-    <title>Smart TV+</title>
+    <!-- Google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=EB+Garamond:wght@500&display=swap" rel="stylesheet">
+    <!-- Bootstrap links here  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Smart TV+</title> -->
   </head>
   <body>
     <!-- Navbar starts here  -->
@@ -33,25 +42,31 @@
         </div>
     </div>
 
-    <h3 id="watch_pre">Watch Premiums for free</h3>
-    <div class="slidemain">
         <!-- Small div cards here -->
-        <div>
-            <img src="https://img1.hotstarext.com/image/upload/f_auto,t_web_m_1x/sources/r1/cms/prod/9234/1389234-h-00aed0f5495d" alt="">
+        <div class="main_slide">
+            <hr>
+            <div>
+                <h3 id="watch_pre">Watch Premiums for free</h3>
+            </div>
+            <div class="slider">
+                <div class="slide-track">
+                    <!-- small cards div coming here -->
+                </div>
+            </div>
+            <hr>
         </div>
-        <div>
-            <img src="https://img1.hotstarext.com/image/upload/f_auto,t_web_m_1x/sources/r1/cms/prod/9234/1389234-h-00aed0f5495d" alt="">
+
+        <div class="static_cards">
+            <div>
+                <h3 id="watch_pre">Most Popular</h3>
+            </div>
+            <div class="static_slider">
+                <div class="static_slide-track">
+                    <!-- small cards div coming here -->
+                </div>
+            </div>
+            <hr>
         </div>
-        <div>
-            <img src="https://img1.hotstarext.com/image/upload/f_auto,t_web_m_1x/sources/r1/cms/prod/9234/1389234-h-00aed0f5495d" alt="">
-        </div>
-        <div>
-            <img src="https://img1.hotstarext.com/image/upload/f_auto,t_web_m_1x/sources/r1/cms/prod/9234/1389234-h-00aed0f5495d" alt="">
-        </div>
-        <div>
-            <img src="https://img1.hotstarext.com/image/upload/f_auto,t_web_m_1x/sources/r1/cms/prod/9234/1389234-h-00aed0f5495d" alt="">
-        </div>
-    </div>
   </body>
   <script src="./src/index.js"></script>
 </html>
