--- a/airplayOriginal.html
+++ b/airplayOriginal.html
@@ -234,12 +234,12 @@
         <div>
             <div id="end1">
                 <div>
-                    <h2>Previous</h2>
+                    <h2 ><a style="color: rgb(21, 17, 17); outline: none;" href="innerPageiphone.html">Previous</a></h2>
                 </div>
                 <div>
-                    <h2>Next</h2>
+                    <h2 ><a style="color: rgb(21, 17, 17); outline: none;" href="innerPageTV.html">Next</a></h2>
 
-                    <a href="">Smart TV and Streaming Devices</a>
+                    
                 </div>
 
             </div>
