--- a/search1.html
+++ b/search1.html
@@ -112,6 +112,18 @@
         border-radius: 18px;
     }
 
+    #diksha{
+        font-size: 17px;
+        background-color: rgb(0, 0, 0);
+        padding-left: 10px;
+        border-color: aliceblue;
+        border-radius: 0.5ch;
+        box-sizing: 20px;
+        padding-right: 20px;
+        margin-right: 20px;
+        color: white;
+    };
+
 
 </style>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -126,7 +138,7 @@
                 " alt="">
                 </div>
                 <div class="btn">
-                    <button id="diksha">Search</button>
+                    <button id="diksha">Go</button>
                     <input class="search" type="search" placeholder="Search">
                     <!-- <input type="submit" placeholder="" value="SignIn" class="signin"> -->
                     <button class="signin"><a href="./signup.html">SignIn</a></button>
@@ -140,4 +152,4 @@
 
     </main>
 </body>
-<script src="./index.js"></script>
+<script src="./search1.js"></script>
