done today's work

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
         <!-- Small div cards here -->
         <div class="main_slide">
-            <hr>
             <div>
                 <h3 id="watch_pre">Watch Premiums for free</h3>
             </div>
@@ -56,17 +55,136 @@
             <hr>
         </div>
 
-        <div class="static_cards">
-            <div>
-                <h3 id="watch_pre">Most Popular</h3>
+        <h3 id="watch_pres">Watch Entire Season</h3>    
+        <div class="row row-cols-1 cardss row-cols-md-5 m-5 g-6">
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is1-ssl.mzstatic.com/image/thumb/cyOx2acFCVHogrIxOOL91A/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+              </div>
             </div>
-            <div class="static_slider">
-                <div class="static_slide-track">
-                    <!-- small cards div coming here -->
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is2-ssl.mzstatic.com/image/thumb/7IByCnsx4L7Dv0CM-H13LA/1478x832.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is4-ssl.mzstatic.com/image/thumb/QD0dOd4cvGFgZ_A8atFxNQ/1478x832.webp" class="card-img-top" alt="Palm Springs Road"/>
+              </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                  <img src="https://is5-ssl.mzstatic.com/image/thumb/bp7tMEP883fjBbk1wLF7LA/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
                 </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="https://is3-ssl.mzstatic.com/image/thumb/vt7su-xCPQYO5Z-IftduYw/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+          </div>
+
+          <hr style="margin: auto; width:90%">
+
+          <h3 id="watch_pres">Most Popular</h3>    
+        <div class="row row-cols-1 cardss row-cols-md-5 m-5 g-6">
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is1-ssl.mzstatic.com/image/thumb/cyOx2acFCVHogrIxOOL91A/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+              </div>
             </div>
-            <hr>
-        </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is2-ssl.mzstatic.com/image/thumb/7IByCnsx4L7Dv0CM-H13LA/1478x832.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is4-ssl.mzstatic.com/image/thumb/QD0dOd4cvGFgZ_A8atFxNQ/1478x832.webp" class="card-img-top" alt="Palm Springs Road"/>
+              </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                  <img src="https://is5-ssl.mzstatic.com/image/thumb/bp7tMEP883fjBbk1wLF7LA/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="https://is3-ssl.mzstatic.com/image/thumb/vt7su-xCPQYO5Z-IftduYw/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+          </div>
+
+          <div class="main2">
+            <img src="" alt="">
+            <div class="mainText">
+                <h4>Horror Movie</h4>
+                <span>This movie describes about a horror story and it's also based on a true story. It can be watched over the night and it'snot going to bore you in entire movie you are going to enjoy it by yourself.</span><br>
+                <span class="fa-solid">Play</span>
+            </div>
+          </div>
+          <br><br>
+          <h3 id="watch_pres">Includes Premier+</h3>    
+        <div class="row row-cols-1 cardss row-cols-md-5 m-5 g-6">
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is1-ssl.mzstatic.com/image/thumb/cyOx2acFCVHogrIxOOL91A/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is2-ssl.mzstatic.com/image/thumb/7IByCnsx4L7Dv0CM-H13LA/1478x832.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is4-ssl.mzstatic.com/image/thumb/QD0dOd4cvGFgZ_A8atFxNQ/1478x832.webp" class="card-img-top" alt="Palm Springs Road"/>
+              </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                  <img src="https://is5-ssl.mzstatic.com/image/thumb/bp7tMEP883fjBbk1wLF7LA/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="https://is3-ssl.mzstatic.com/image/thumb/vt7su-xCPQYO5Z-IftduYw/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+          </div>
+
+          <h3 id="watch_pres">Future Release</h3>    
+        <div class="row row-cols-1 cardss row-cols-md-5 m-5 g-6">
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is1-ssl.mzstatic.com/image/thumb/cyOx2acFCVHogrIxOOL91A/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is2-ssl.mzstatic.com/image/thumb/7IByCnsx4L7Dv0CM-H13LA/1478x832.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://is4-ssl.mzstatic.com/image/thumb/QD0dOd4cvGFgZ_A8atFxNQ/1478x832.webp" class="card-img-top" alt="Palm Springs Road"/>
+              </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                  <img src="https://is5-ssl.mzstatic.com/image/thumb/bp7tMEP883fjBbk1wLF7LA/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="https://is3-ssl.mzstatic.com/image/thumb/vt7su-xCPQYO5Z-IftduYw/1478x832.webp" class="card-img-top" alt="Skyscrapers"/>
+                </div>
+              </div>
+          </div>
   </body>
   <script src="./src/index.js"></script>
 </html>
